--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jotai": "^2.5.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite-express": "*"
@@ -27,7 +29,10 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
+    "autoprefixer": "^10.4.16",
     "nodemon": "^2.0.20",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.0.4"
   }
 }
